--- a/src/lib/config.py.in
+++ b/src/lib/config.py.in
@@ -40,7 +40,7 @@ APPNAME		= "Revelation"
 PACKAGE		= "@PACKAGE@"
 VERSION		= "@VERSION@"
 DATAVERSION	= 1
-RELNAME		= "One toke? You poor fool!"
+RELNAME		= "Did I say that, or just think it?"
 URL		= "http://oss.codepoet.no/revelation/"
 AUTHORS		= [ "Erik Grinaker <erikg@codepoet.no>" ]
 ARTISTS		= [ "Erik Grinaker <erikg@codepoet.no>" ]
