--- a/src/revelation-applet.in
+++ b/src/revelation-applet.in
@@ -30,7 +30,7 @@ import gettext, gnome, gnomeapplet, gobject, gtk, os, sys
 if "@pyexecdir@" not in sys.path:
 	sys.path.insert(0, "@pyexecdir@")
 
-from revelation import config, data, datahandler, dialog, entry, io, mman, ui, util
+from revelation import config, data, datahandler, dialog, entry, io, ui, util
 
 _ = gettext.gettext
 
@@ -90,7 +90,7 @@ class RevelationApplet(object):
 		# install the Revelation schema
 		def check_launchers():
 			try:
-				for entrytype in [ et for et in entry.ENTRYLIST if et != entry.FolderEntry ]:
+				for entrytype in [ et() for et in entry.ENTRYLIST if et != entry.FolderEntry ]:
 					self.config.get("/apps/revelation/launcher/%s" % entrytype.id)
 
 			except config.ConfigError:
