moved stock items and icons to separate module, and use factories from python-shinygnome

--- a/src/SConscript
+++ b/src/SConscript
@@ -57,6 +57,7 @@ source_lib = env.Substitute("lib/config.py.in") + [
 	"lib/dialog.py",
 	"lib/entry.py",
 	"lib/io.py",
+	"lib/stock.py",
 	"lib/ui.py",
 	"lib/util.py",
 ]
