--- a/src/revelation-applet.in
+++ b/src/revelation-applet.in
@@ -764,7 +764,7 @@ class Preferences(dialog.Utility):
 		self.section_file = page.add_section(_('File Handling'))
 
 		# entry for file
-		self.button_file = ui.FileButton(_('Select File to Use'))
+		self.button_file = ui.FileChooserButton(_('Select File to Use'))
 		ui.config_bind(self.config, "file", self.button_file)
 
 		eventbox = ui.EventBox(self.button_file)
