--- a/src/lib/config.py.in
+++ b/src/lib/config.py.in
@@ -25,8 +25,8 @@
 
 import gettext
 
-import revelation.shinygnome.config
-from revelation.shinygnome.config.error import *
+import shinygnome.config
+from shinygnome.config.error import *
 
 _ = gettext.gettext
 
@@ -62,5 +62,5 @@ along with Revelation; if not, write to the Free Software Foundation, Inc.,
 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA""")
 
 
-Config = revelation.shinygnome.config.GConf
+Config = shinygnome.config.GConf
 
