--- a/src/revelation-applet.in
+++ b/src/revelation-applet.in
@@ -578,9 +578,13 @@ class RevelationApplet(object):
 			self.popup_entrylist.connect("entry-chosen", lambda w,e: self.entry_show(e, focusafter))
 
 			if focusafter == True:
-				self.popup_entrylist.connect("closed", lambda w: self.__focus_entry())
+				self.popup_entrylist.connect("unrealize", lambda w: self.__focus_entry())
 
 			self.popup_entrylist.realize()
+
+			for child in self.popup_entrylist.get_children():
+				child.show_all()
+
 			x, y = self.__get_popup_offset(self.popup_entrylist)
 			self.popup_entrylist.show(x, y)
 
@@ -593,13 +597,13 @@ class RevelationApplet(object):
 		self.popup_entryview = EntryViewPopup(e, self.config, self.clipboard)
 
 		if focusafter == True:
-			self.popup_entryview.connect("closed", lambda w: self.__focus_entry())
+			self.popup_entryview.connect("unrealize", lambda w: self.__focus_entry())
 
 		def cb_goto(widget):
 			if self.__launcher_valid(e):
 				self.entry_goto(e)
 
-			self.popup_entryview.close()
+			self.popup_entryview.destroy()
 
 		self.popup_entryview.button_goto.connect("clicked", cb_goto)
 		self.popup_entryview.button_goto.set_sensitive(self.__launcher_valid(e))
