--- a/src/revelation.in
+++ b/src/revelation.in
@@ -321,7 +321,7 @@ class Revelation(ui.App):
 		self.entrysearch.type	= None
 
 		# set ui widget states
-		self.__state_clipboard(self.entryclipboard.has_contents())
+		self.__state_clipboard(self.entryclipboard.has_text())
 		self.__state_entry([])
 		self.__state_file(None)
 		self.__state_find(self.searchbar.entry.get_text())
@@ -1039,7 +1039,7 @@ class Revelation(ui.App):
 			self.statusbar.set(_('Entry has no password to copy'))
 
 		else:
-			self.clipboard.set(secrets, True)
+			self.clipboard.set_text(secrets, True)
 			self.statusbar.set(_('Password copied to clipboard'))
 
 
@@ -1216,7 +1216,7 @@ class Revelation(ui.App):
 				if self.config.get("clipboard/chain_username") == True and len(chain) > 0 and e.has_field(entry.UsernameField) == True and e[entry.UsernameField] != "" and "%" + entry.UsernameField.symbol not in command:
 					chain.insert(0, e[entry.UsernameField])
 
-				self.clipboard.set(chain, True)
+				self.clipboard.set_text(chain, True)
 
 				# generate and run goto command
 				command = util.parse_subst(command, subst)
